# GrafikaProjekt

./: CMakeLists.txt  README.md
glProgram/sources/: framework.cpp  framework.h  greenTriangle.cpp  hengerekRay.cpp  mercator.cpp  pointsLines.cpp  rollercoaster.cpp
